--- a/config/database.yml
+++ b/config/database.yml
@@ -1,8 +1,7 @@
-
 default: &default
   adapter: mysql2
   encoding: utf8
-  username: root
+  username: <%= ENV.fetch("DATABASE_USER") %>
   password: 12345
   host: 127.0.0.1
   port: 3306
@@ -12,5 +11,3 @@ default: &default
 development:
   <<: *default
   database: "learn_rails"
-
-
